--- a/account-notifications.html
+++ b/account-notifications.html
@@ -2323,9 +2323,9 @@
       <div class="modal__backdrop"></div>
       <section>
         <div class="modal__container" data-testid="modal-container">
-          <div class="_z4lmgp">
+          <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-            <div class="_z4lmgp">
+            <div class="contents">
               <div
                 role="dialog"
                 aria-label="Recognition and achievements"
@@ -2538,9 +2538,9 @@
       <div class="modal__backdrop"></div>
       <section>
         <div class="modal__container" data-testid="modal-container">
-          <div class="_z4lmgp">
+          <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-            <div class="_z4lmgp">
+            <div class="contents">
               <div
                 role="dialog"
                 aria-label="Are you sure?"
