--- a/inbox.html
+++ b/inbox.html
@@ -359,7 +359,7 @@
         padding: 0px !important;
         margin: 0px !important;
       }
-      ._z4lmgp {
+      .contents {
         display: contents !important;
       }
       ._b21f4g {
@@ -7421,9 +7421,9 @@
                     aria-hidden="true"
                   ></div>
                   <fieldset class="_1kxoodi" disabled="">
-                    <div class="_z4lmgp">
+                    <div class="contents">
                       <div class="_b21f4g" aria-hidden="true"></div>
-                      <div class="_z4lmgp">
+                      <div class="contents">
                         <div
                           data-overlay-md=""
                           data-overlay-lg=""
