--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -44,9 +44,9 @@
                 <div class="_hgs47m">
                   <div class="cell-middle">
                     <div>
-                      <div class="_z4lmgp">
+                      <div class="contents">
                         <div class="_b21f4g" aria-hidden="true"></div>
-                        <div class="_z4lmgp">
+                        <div class="contents">
                           <div class="_ousp44">
                             <div>
                               <div data-showat="largeAndAbove">
