--- a/explore-where.html
+++ b/explore-where.html
@@ -12,9 +12,9 @@
     <div dir="ltr">
       <section>
         <div class="_j292vx" data-testid="modal-container">
-          <div class="_z4lmgp">
+          <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-            <div class="_z4lmgp">
+            <div class="contents">
               <div
                 role="dialog"
                 aria-label=""
@@ -24,7 +24,7 @@
                 style="position: relative"
               >
                 <div
-                  class="_z4lmgp"
+                  class="contents"
                   style="
                     --gp-padding-xsmallAndAbove: 24px;
                     --gp-padding-smallAndAbove: 24px;
@@ -34,7 +34,7 @@
                     --gp-padding-xlargeAndAbove: 24px;
                   "
                 >
-                  <div class="_y0r5kt">
+                  <div class="contents">
                     <div class="_159z8rr">
                       <div class="_fz3zdn"></div>
                       <div class="_1t78k44">
