--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1212,9 +1212,9 @@
       aria-hidden="true"
     >
       <div class="modal-dialog modal-dialog-centered" class="modal__container">
-        <div class="_z4lmgp">
+        <div class="contents">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-          <div class="_z4lmgp">
+          <div class="contents">
             <div
               role="dialog"
               aria-label="Select a theme"
