--- a/account-settings.html
+++ b/account-settings.html
@@ -917,18 +917,18 @@
                                     >
                                       <div class="_w688nhn">
                                         <ul class="_11hau3k">
-                                          <li class="_g86r3e">
+                                          <li class="inline">
                                             <a href="/help" class="_1sikdxcl"
                                               >Help &amp; support</a
                                             >
                                           </li>
-                                          <li class="_g86r3e">
+                                          <li class="inline">
                                             <span aria-hidden="true">·</span>
                                             <a href="/terms" class="_1sikdxcl"
                                               >Terms of Service</a
                                             >
                                           </li>
-                                          <li class="_g86r3e">
+                                          <li class="inline">
                                             <span aria-hidden="true">·</span>
                                             <a
                                               href="/terms/privacy_policy"
