--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -198,7 +198,7 @@
                               Today
                             </button>
                           </div>
-                          <div class="_1g8cjd8">
+                          <div class="inline">
                             <button
                               aria-label="Today"
                               type="button"
@@ -296,7 +296,7 @@
                           >
                             <div class="_4mgw92">
                               <div class="_1apusbw">July 9, 2022</div>
-                              <div class="_1g8cjd8">July 2022</div>
+                              <div class="inline">July 2022</div>
                               <span class="_uhxsfg"
                                 ><svg
                                   viewBox="0 0 32 32"
@@ -361,7 +361,7 @@
                             </div>
                           </div>
                           <div class="_c9hv0sy"></div>
-                          <div class="_1lwbucx">
+                          <div class="inline">
                             <button
                               aria-label="Today"
                               type="button"
@@ -458,7 +458,7 @@
                                       type="button"
                                     >
                                       <div>
-                                        <div class="_1lwbucx">
+                                        <div class="inline">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -760,7 +760,7 @@
                                       type="button"
                                     >
                                       <div>
-                                        <div class="_1lwbucx">
+                                        <div class="inline">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
