--- a/calendar_week.html
+++ b/calendar_week.html
@@ -196,7 +196,7 @@
                               Today
                             </button>
                           </div>
-                          <div class="_1g8cjd8">
+                          <div class="inline">
                             <button
                               aria-label="Today"
                               type="button"
@@ -294,7 +294,7 @@
                           >
                             <div class="_4mgw92">
                               <div class="_1apusbw">July 9, 2022</div>
-                              <div class="_1g8cjd8">July 2022</div>
+                              <div class="inline">July 2022</div>
                               <span class="_uhxsfg"
                                 ><svg
                                   viewBox="0 0 32 32"
@@ -359,7 +359,7 @@
                             </div>
                           </div>
                           <div class="_c9hv0sy"></div>
-                          <div class="_1lwbucx">
+                          <div class="inline">
                             <button
                               aria-label="Today"
                               type="button"
@@ -456,7 +456,7 @@
                                       type="button"
                                     >
                                       <div>
-                                        <div class="_1lwbucx">
+                                        <div class="inline">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -758,7 +758,7 @@
                                       type="button"
                                     >
                                       <div>
-                                        <div class="_1lwbucx">
+                                        <div class="inline">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -3212,7 +3212,7 @@
                                     </div>
                                     <div class="_1yqloi9">
                                       <div class="_1dmr5la">
-                                        <div class="_g86r3e">
+                                        <div class="inline">
                                           Cooking Deep Fried Bright Orange
                                           Battered Eggs
                                         </div>
@@ -3225,7 +3225,7 @@
                                       <span class="a8jt5op dir dir-ltr"
                                         >Private group · Not booked yet</span
                                       ><span aria-hidden="true"
-                                        ><div class="_g86r3e">
+                                        ><div class="inline">
                                           Private group · Not booked yet
                                         </div></span
                                       >
@@ -3291,7 +3291,7 @@
                                     </div>
                                     <div class="_1yqloi9">
                                       <div class="_1dmr5la">
-                                        <div class="_g86r3e">
+                                        <div class="inline">
                                           Cooking Deep Fried Bright Orange
                                           Battered Eggs
                                         </div>
@@ -3304,7 +3304,7 @@
                                       <span class="a8jt5op dir dir-ltr"
                                         >Private group · Not booked yet</span
                                       ><span aria-hidden="true"
-                                        ><div class="_g86r3e">
+                                        ><div class="inline">
                                           Private group · Not booked yet
                                         </div></span
                                       >
