--- a/contact-host.html
+++ b/contact-host.html
@@ -789,7 +789,7 @@
                                                     class="_1yydbd74"
                                                   >
                                                     <div class="_3i1l2kz">
-                                                      <span class="_1t3783v"
+                                                      <span class="inline-block"
                                                         >Stays</span
                                                       >
                                                     </div></button
@@ -810,14 +810,14 @@
                                                     class="_1yydbd74"
                                                   >
                                                     <div class="_882esz">
-                                                      <span class="_1t3783v"
+                                                      <span class="inline-block"
                                                         >Experiences</span
                                                       >
                                                     </div>
                                                   </button>
                                                 </div>
                                               </div>
-                                              <div class="_36rlri">
+                                              <div class="inline-block">
                                                 <a
                                                   href="/s/experiences/online"
                                                   class="_1yydbd74"
