--- a/login-security.html
+++ b/login-security.html
@@ -1254,7 +1254,7 @@
                                 >
                                   <nav aria-label="Account">
                                     <ol class="_1ckj08w">
-                                      <li class="_36rlri">
+                                      <li class="inline-block">
                                         <span class="_121z06r2"
                                           ><a
                                             href="/account-settings"
@@ -1264,9 +1264,9 @@
                                           ></span
                                         >
                                       </li>
-                                      <li class="_36rlri">
+                                      <li class="inline-block">
                                         <div
-                                          class="_36rlri"
+                                          class="inline-block"
                                           style="
                                             margin-left: 16px;
                                             margin-right: 16px;
@@ -1316,7 +1316,7 @@
                                         <div class="_4nwxh0j">
                                           <div class="_qgvrjoy">
                                             <div role="tablist" class="_csc5ey">
-                                              <div class="_36rlri">
+                                              <div class="inline-block">
                                                 <button
                                                   type="button"
                                                   class="_bm3n7y3"
