--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -669,7 +669,7 @@
                                 >
                                   <nav aria-label="Account">
                                     <ol class="_1ckj08w">
-                                      <li class="_36rlri">
+                                      <li class="inline-block">
                                         <span class="_121z06r2"
                                           ><a
                                             href="/account-settings"
@@ -679,9 +679,9 @@
                                           ></span
                                         >
                                       </li>
-                                      <li class="_36rlri">
+                                      <li class="inline-block">
                                         <div
-                                          class="_36rlri"
+                                          class="inline-block"
                                           style="
                                             margin-left: 16px;
                                             margin-right: 16px;
@@ -731,7 +731,7 @@
                                         <div class="_4nwxh0j">
                                           <div class="_qgvrjoy">
                                             <div role="tablist" class="_csc5ey">
-                                              <div class="_36rlri">
+                                              <div class="inline-block">
                                                 <button
                                                   type="button"
                                                   class="_8m436th"
@@ -742,7 +742,7 @@
                                                   PAYMENTS
                                                 </button>
                                               </div>
-                                              <div class="_36rlri">
+                                              <div class="inline-block">
                                                 <button
                                                   type="button"
                                                   class="_8m436th"
@@ -753,7 +753,7 @@
                                                   PAYOUTS
                                                 </button>
                                               </div>
-                                              <div class="_36rlri">
+                                              <div class="inline-block">
                                                 <button
                                                   type="button"
                                                   class="_8m436th"
@@ -764,7 +764,7 @@
                                                   TAXES
                                                 </button>
                                               </div>
-                                              <div class="_36rlri">
+                                              <div class="inline-block">
                                                 <button
                                                   type="button"
                                                   class="_bm3n7y3"
