--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -55,7 +55,7 @@
                                   class="_1g2dfiu"
                                   aria-label="Airbnb homepage"
                                   ><div class="_5nim5h">
-                                    <div class="_36rlri">
+                                    <div class="inline-block">
                                       <div class="_iiid5y">
                                         <svg
                                           viewBox="0 0 1000 1000"
