--- a/submission/about.html
+++ b/submission/about.html
@@ -1065,7 +1065,7 @@
                                 <div class="_1xq6rjf">
                                   <fieldset class="_25bp3z" role="radiogroup">
                                     <legend class="_1wjt7fx">
-                                      <div class="_g86r3e">
+                                      <div class="inline">
                                         How are you hosting this experience?
                                       </div>
                                     </legend>
