--- a/submission/review.html
+++ b/submission/review.html
@@ -1060,7 +1060,7 @@
                               </section>
                             </div>
                             <div class="_1uhu1ks">
-                              <div class="_g86r3e">
+                              <div class="inline">
                                 You may be required to have additional licenses,
                                 permits, or permissions because of details that
                                 are specific to your experience:
@@ -1348,7 +1348,7 @@
                                       class="_gw4xx4"
                                     >
                                       <div class="_uvcwnv">
-                                        <div class="_g86r3e">
+                                        <div class="inline">
                                           By selecting this checkbox, I agree to
                                           the Airbnb Experience
                                           <a
