--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -514,7 +514,7 @@
                                                 Redeem a gift card and look up
                                                 your credit balance.
                                                 <div
-                                                  class="_g86r3e"
+                                                  class="inline"
                                                   style="margin-left: 8px"
                                                 >
                                                   <a
@@ -905,7 +905,7 @@
                                 >
                                   <nav aria-label="Account">
                                     <ol class="_1ckj08w">
-                                      <li class="_36rlri">
+                                      <li class="inline-block">
                                         <span class="_121z06r2"
                                           ><a
                                             href="/account-settings"
@@ -915,9 +915,9 @@
                                           ></span
                                         >
                                       </li>
-                                      <li class="_36rlri">
+                                      <li class="inline-block">
                                         <div
-                                          class="_36rlri"
+                                          class="inline-block"
                                           style="
                                             margin-left: 16px;
                                             margin-right: 16px;
@@ -1262,7 +1262,7 @@
                                                 Redeem a gift card and look up
                                                 your credit balance.
                                                 <div
-                                                  class="_g86r3e"
+                                                  class="inline"
                                                   style="margin-left: 8px"
                                                 >
                                                   <a
