--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -904,7 +904,7 @@
                                 >
                                   <nav aria-label="Account">
                                     <ol class="_1ckj08w">
-                                      <li class="_36rlri">
+                                      <li class="inline-block">
                                         <span class="_121z06r2"
                                           ><a
                                             href="/account-settings"
@@ -914,9 +914,9 @@
                                           ></span
                                         >
                                       </li>
-                                      <li class="_36rlri">
+                                      <li class="inline-block">
                                         <div
-                                          class="_36rlri"
+                                          class="inline-block"
                                           style="
                                             margin-left: 16px;
                                             margin-right: 16px;
