--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -37,7 +37,7 @@
                             type="button"
                           >
                             <div class="_5nim5h">
-                              <div class="_36rlri">
+                              <div class="inline-block">
                                 <div class="_iiid5y">
                                   <svg
                                     viewBox="0 0 1000 1000"
@@ -57,7 +57,7 @@
                                   </svg>
                                 </div>
                               </div>
-                              <div class="_mo78s93">
+                              <div class="inline-block">
                                 <div class="_3n7658">
                                   <div
                                     class="_z7e3cb"
@@ -92,7 +92,7 @@
                             class="_1g2dfiu"
                             aria-label="Airbnb homepage"
                             ><div class="_5nim5h">
-                              <div class="_36rlri">
+                              <div class="inline-block">
                                 <div class="_iiid5y">
                                   <svg
                                     viewBox="0 0 1000 1000"
@@ -416,7 +416,7 @@
                 <div style="margin-top: 40px; margin-bottom: 40px">
                   <nav>
                     <ol class="_1ckj08w">
-                      <li class="_36rlri">
+                      <li class="inline-block">
                         <span class="_121z06r2"
                           ><a
                             href="/users/show"
@@ -426,9 +426,9 @@
                           ></span
                         >
                       </li>
-                      <li class="_36rlri">
+                      <li class="inline-block">
                         <div
-                          class="_36rlri"
+                          class="inline-block"
                           style="margin-left: 16px; margin-right: 16px"
                         >
                           <svg
