--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1170,7 +1170,7 @@
                               <div class="_1xq6rjf">
                                 <fieldset class="_25bp3z" role="radiogroup">
                                   <legend class="_1wjt7fx">
-                                    <div class="_g86r3e">
+                                    <div class="inline">
                                       When are you typically available to host?
                                     </div>
                                   </legend>
