--- a/submission/expertise.html
+++ b/submission/expertise.html
@@ -1092,7 +1092,7 @@
                               </div>
                             </div>
                             <div class="_1uhu1ks">
-                              <div class="_g86r3e">
+                              <div class="inline">
                                 <p class="_1mm0shk">
                                   We’re looking for passionate storytellers who
                                   can share a unique perspective and insider
@@ -1115,7 +1115,7 @@
                                 <div class="_1xq6rjf">
                                   <fieldset class="_25bp3z" role="radiogroup">
                                     <legend class="_1wjt7fx">
-                                      <div class="_g86r3e">
+                                      <div class="inline">
                                         Have you hosted this activity before?
                                       </div>
                                     </legend>
