--- a/become-a-host/_location.html
+++ b/become-a-host/_location.html
@@ -71,7 +71,7 @@
               <div class="_19co9bom" aria-hidden="false">
                 <div class="_l6v72tr">
                   <div class="_fwc96">
-                    <div class="_1ynbv25 d-md-none">
+                    <div class="block d-md-none">
                       <div class="_muecdg">
                         <button
                           aria-label="Close"
