--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -21,7 +21,7 @@
                 <div class="_oy5ese d-md-none">
                   <div class="_1l7bhkmt">
                     <div class="_fwc96">
-                      <div class="_1ynbv25">
+                      <div class="block">
                         <div>
                           <button
                             aria-label="Close"
