--- a/contact-host.html
+++ b/contact-host.html
@@ -223,7 +223,7 @@
                               <main id="site-content">
                                 <form>
                                   <div>
-                                    <div class="_1ynbv25">
+                                    <div class="block">
                                       <div class="c1yo0219 dir dir-ltr">
                                         <div
                                           style="--gp-section-max-width: 1120px"
