--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -213,8 +213,8 @@
                         </div>
                       </nav>
                       <div tabindex="-1" class="_1i7ccu91">
-                        <div class="_1ynbv25">
-                          <div class="_1ynbv25">
+                        <div class="block">
+                          <div class="block">
                             <div class="_s8pn9w">
                               <div class="_2b0qwl">
                                 <div class="_1o4zwko" role="presentation">
